...
        android:layout_height="match_parent"
        android:weightSum="1"
        tools:ignore="ExtraText">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address:"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            android:paddingBottom="2dp" />

        <EditText
            android:layout_width="match_parent"
...
            android:layout_width="wrap_content"
            android:layout_height="40dp">

            <EditText
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:id="@+id/city"
                android:hint=" Enter City"
                android:focusable="true"
                android:textColorHighlight="#fb00ff"
                android:textColorHint="#2945a3" />

            <Spinner
                android:id="@+id/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:dropDownWidth="150dp"/>

...

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="0dp"
            android:id="@+id/postcode"
            android:hint="Enter Zip Code"
            android:focusable="true"
            android:textColorHighlight="#fb00ff"
            android:textColorHint="#2945a3" />

        <TextView
...
            android:paddingBottom="2dp" />

        <EditText
            android:layout_width="120dp"
            android:paddingTop="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/price"
            android:hint="Price"
            android:inputType="numberDecimal"
            android:focusable="true"
            android:textColorHighlight="#fb00ff"
            android:textColorHint="#2945a3" />
    </LinearLayout>
...
            android:gravity="center">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColorHint="#2945a3"
                android:id="@+id/startDateEditText"
                android:hint="Pick Start Date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
...
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColorHint="#2945a3"
                android:layout_below="@+id/stepTwo"
                android:id="@+id/endDateEditText"
                android:hint="Pick End Date"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
...
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColorHint="#2945a3"
                android:layout_below="@+id/stepTwo"
                android:id="@+id/startTimeEditText"
                android:hint="Pick Start Time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
...
                android:text="   to   " />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColorHint="#2945a3"
                android:id="@+id/endTimeEditText"
                android:hint="Pick End Time"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filters:"
            android:paddingLeft="10dp"
            android:textSize="16dp"
            android:paddingBottom="2dp" />

        <com.csci310.ParkHere.MultiSelectionSpinner
            android:id="@+id/mySpinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:textSize="16dp"
            android:paddingBottom="2dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:id="@+id/description"
            android:hint=" Enter Description"
            android:focusable="true"
            android:textColorHighlight="#fb00ff"
            android:textColorHint="#2945a3" />

        <TextView
...


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_norefund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.No refund"
                android:textColor="#2945a3"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_80refund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.80% refund rate at any time"
                android:textColor="#2945a3"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_full_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3.Full refund if cancell before 7 days, 50% refund if cancell less than 7 days"
                android:textColor="#2945a3"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_full_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.Full refund if cancell before 7 days, no refund if cancell less than 7 days"
                android:textColor="#2945a3"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
...
