...
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">


        <ImageView
            android:id="@+id/profilePicImageView"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_face_black_24dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center" />

...
                android:textSize="20dp"
                android:textColor="#009688" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameEditText"
                android:hint=""
                android:textSize="20dp"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:layout_centerHorizontal="true"
                android:inputType="textCapWords"
...
                android:textSize="20dp"
                android:textColor="#009688" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emailEditText"
                android:hint=""
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:inputType="textEmailAddress"
                android:textColorHighlight="#fb00ff"
...
                android:textSize="20dp"
                android:textColor="#009688" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phoneEditText"
                android:hint=""
                android:textSize="20dp"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:inputType="phone"
                android:textColorHighlight="#fb00ff"
...
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View History"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/viewHostHistoryButton"
                 />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/editUserDetailsToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textOn="Done"
            android:textOff="Update information"
            android:layout_gravity="center_horizontal" />
...
